--- a/lib/popup.css
+++ b/lib/popup.css
@@ -131,9 +131,12 @@ li:hover h3, li:hover h4 {
 audio {
 	position: absolute;
 	top: 21px;
-	width: 48px;
-	right: 1px;
+	width: 64px;
+	right: -30px;
 	border: 0;
+	padding: 0;
+	margin: 0;
+	display: block;
 }
 audio:hover {
 	cursor: pointer;
