--- a/lib/popup.css
+++ b/lib/popup.css
@@ -131,21 +131,21 @@ ol li .itms {
 	width: 63px;
 }
 
-/Users/mike/Dev/git/boombastic/img/iTunes_Store_Small_Badge_RGB_012318.svg
-
 li:hover h3, li:hover h4 {
 	color: #6ea4e7;
 	transition: color .3s ease-out, color .3s ease-in;
 }
 audio {
-	position: absolute;
-	top: 8px;
-	width: 84px;
-	right: -20px;
-	border: 0;
-	padding: 0;
+  position: absolute;
+  top: 8px;
+  width: 100px;
+  right: -35px;
+  border: 0;
+  padding: 0;
 	margin: 0;
+	outline: 0;
 }
+
 audio:hover {
 	cursor: pointer;
 }
