--- a/src/popup.css
+++ b/src/popup.css
@@ -139,17 +139,17 @@ h4:after {
   content: "\201D";
 }
 
-ol,
+ul,
 li {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
-ol {
+u {
   margin-right: 3px;
 }
 
-ol li {
+ul li {
   background-image: radial-gradient(
     circle farthest-corner at center top,
     #222 0%,
@@ -163,7 +163,7 @@ ol li {
   width: 97%;
 }
 
-ol li a {
+ul li a {
   color: #fff;
   float: left;
   height: 60px;
@@ -171,12 +171,12 @@ ol li a {
   width: 85%;
 }
 
-ol li a i {
+ul li a i {
   color: #f1f1f1;
   font-weight: 300;
 }
 
-ol li .am {
+ul li .am {
   height: auto;
   margin: 10px auto 0 5px;
   width: 63px;
