--- a/src/popup.css
+++ b/src/popup.css
@@ -1,3 +1,10 @@
+:root {
+  --boom-black: rgba(0, 0, 0, 1);
+  --boom-charcoal: rgba(34, 34, 34, 1);
+  --boom-charcoal: rgba(51, 51, 51, 1);
+  --boom-heather: rgba(69, 69, 69, 1);
+}
+
 @font-face {
   font-family: "DM Sans";
   src:
@@ -17,14 +24,14 @@
 }
 ::-webkit-scrollbar-thumb {
   height: 175px;
-  border: 1px solid #222;
+  border: 1px solid var(--boom-charcoal);
   border-radius: 2px;
-  background: #333;
-  box-shadow: inset 1px 1px 0 0 #444;
+  background: var(--boom-charcoal);
+  box-shadow: inset 1px 1px 0 0 var(--boom-heather);
 }
 ::-webkit-scrollbar-thumb:hover {
-  border: 1px solid #333;
-  background: #444;
+  border: 1px solid var(--boom-charcoal);
+  background: var(--boom-heather);
   box-shadow: inset 1px 1px 0 0 #555;
 }
 ::-webkit-scrollbar-button,
@@ -35,7 +42,7 @@
 
 
 body {
-  background-color: #000;
+  background-color: var(--boom-black);
   color: #f8f8f8;
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
@@ -77,7 +84,7 @@ h1 {
   left: 9px;
   letter-spacing: -0.03em;
   position: absolute;
-  text-shadow: 2px 2px 0 #000;
+  text-shadow: 2px 2px 0 var(--boom-black);
   top: -15px;
   width: auto;
 }
@@ -128,7 +135,6 @@ h3 {
 h4 {
   font-weight: 500;
   font-size: 13px;
-  font-style: oblique;
   margin: 0 0 0 76px;
 }
 
@@ -251,7 +257,7 @@ select {
 
 .album {
   border-radius: 5px;
-  box-shadow: 1px 1px 1px 0 #000;
+  box-shadow: 1px 1px 1px 0 var(--boom-black);
   position: absolute;
   top: 5px;
   left: 5px;
