--- a/src/popup.css
+++ b/src/popup.css
@@ -234,7 +234,6 @@ audio::-webkit-media-controls-timeline,
 -internal-media-controls-overflow-button {
   display: none !important;
 }
-
 input[type="range"] {
   display: none !important;
 }
@@ -274,7 +273,8 @@ a {
   right: 3px;
   top: 8px;
   width: 111px;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255, 255, 255, 0.2));
+  -webkit-box-reflect: below 1px
+    linear-gradient(transparent, rgba(255, 255, 255, 0.2));
 }
 
 #viz > div {
